feat: localize Options page title to Korean
- Updated the language attribute in the HTML from English to Korean.
- Changed the title of the Options page to "너굴폼 옵션" for improved localization and user experience.

--- a/pages/options/index.html
+++ b/pages/options/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <title>Options</title>
+    <title>너굴폼 옵션</title>
   </head>
 
   <body>
